test_src/compiler_errors/types/arithmetic/IncrementBoolError2.b
class IncrementBoolError2 {
    void test() {
        var value = true;
        println(++value);
    }
}
